# MX33

./: .gitignore  .gitmodules  Broker.hpp  CMakeLists.txt  DEEPWIKI.md  Publisher.hpp  README.md  broker.cpp  camera_publisher.cpp  camera_subscriber.cpp  config.yaml  demo_service_client.cpp  demo_service_server.cpp  global_to_local_tf.txt  global_to_odom_tf.txt  global_to_odom_tf_scene1.txt  global_to_odom_tf_scene2.txt  global_to_odom_tf_scene3.txt  map_server.cpp  robot.cpp  visualize_octomap.py  visualize_octomap_matplotlib.py
curve/: broker_pub.key  broker_secret.key
demo/: camera_publisher.cpp  camera_subscriber.cpp  demo_service_client.cpp  demo_service_server.cpp  test_get_frontiers.cpp
include/: broker.hpp  client.hpp  publisher.hpp  robot.hpp  server.hpp  service_server.hpp  subscriber.hpp
msgs/: pointcloud.hpp  pointcloud_tf.hpp  pose_stamped.hpp  transforms.hpp
scripts/: reconnect_wifi.sh  view_map.sh
srvs/: get_frontiers.hpp  register_robot.hpp  string.hpp
utils/: get_local_ip.hpp
val/: ports.hpp
